5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1721_3037.log
== TEST (2019-05-02 18:21:34) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1)
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x>=1)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:35) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1)
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x>=1)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:43) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x=>1)
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x=>1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:45) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x=>1)
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x=>1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:45) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x=>1)
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x=>1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:51) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x=>1):
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x=>1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:52) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x=>1):
	print(x**2)
else:
	print("hdhdh")
-- ERROR:
File "XXXX", line 3
    if (x<=(-1))or(x=>1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:00) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1):
	print(x**2)
else:
	print("hdhdh")
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:09) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1):
	print(x**2)
else:
	print("hdhdh")
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:13) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1):
	print(x**2)
else:
	print("hdhdh")
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:15) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1):
	print(x**2)
else:
	print("hdhdh")
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:03) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1):
	print(x**2)
elif((-1)<x<0)or(0<x<1):
	print(x)
elif(x==0):
	print(1)
else:
	print("hdhdh")
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:24:22) 
-- CODE:
from math import*
x=float(input("digite_valor_de_x:" ))
if (x<=(-1))or(x>=1):
	print(x**2)
elif((-1)<x<0)or(0<x<1):
	print(x)
elif(x==0):
	print(1)
else:
	print("hdhdh")
-- EXECUTION TIME:
0.175073
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
3.9601
---- user output:
3.9601
-- TEST CASE 2:
---- input:
0.99
---- correct output:
0.99
---- user output:
0.99
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
1.0201
---- user output:
1.0201
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
